# studio

./: .env  .gitignore  Makefile  README.md
.cursor/rules/: DEAD-CODE-REMOVER.mdc  OBSIDIAN.mdc  SIMPLIFIER.mdc  architect-planner.mdc  context-explorer.mdc  feature-planner.mdc  fix-planner.mdc  git-committer.mdc  implementer.mdc  orchestrator-agent-role.mdc  (+6 more)
backend/: .env  README.md  pyproject.toml
backend/instance/: app.db
backend/src/: celery_app.py  exceptions.py
backend/src/adk/agents/: __init__.py  definitions.py  orchestrator.py
backend/src/adk/agents/memory/: memory_manager.py
backend/src/adk/agents/planner/: file_identification.py
backend/src/adk/agents/processing/: code_execution_verifier.py  code_parser.py  fact_checker.py  verifier.py
backend/src/adk/agents/visualization/: visualizer.py
backend/src/adk/agents/writer/: summarizer.py
backend/src/adk/prompts/: __init__.py
backend/src/adk/services/: checkpoint_service.py  memory_service.py
backend/src/adk/tools/: __init__.py  definitions.py
backend/src/app/: __init__.py  celery_app.py  config.py  constants.py  container.py  logging_setup.py
backend/src/app/api/: history_api.py  jobs_api.py
backend/src/core/: git_utils.py
backend/src/git_repo_documentor/: __main__.py  git_repo_documentor.md  main.py  models.py  server.py  tasks.py
backend/src/git_repo_documentor/agents/: orchestrator.py
backend/src/git_repo_documentor/agents/memory/: knowledge_graph_manager.py
backend/src/git_repo_documentor/agents/planner/: structure_designer.py
backend/src/git_repo_documentor/agents/processing/: code_interpreter.py  content_generator.py  dependency_analyzer.py  feature_extractor.py  self_reflection.py  testing_analyzer.py
backend/src/git_repo_documentor/agents/writer/: md_formatter.py  obsidian_writer.py
backend/src/git_repo_documentor/services/: factory.py  memory_service.py
backend/src/git_repo_documentor/tools/: __init__.py  code_executor.py  code_parser.py  dependency_analyzer.py  fact_verification.py  file_system.py  knowledge_graph.py  memory_tools.py  obsidian_linker.py  visualization.py  web_search.py
backend/src/instance/: history.db
backend/src/persistence/: __init__.py  repository.py
backend/src/tasks/: documentation_task.py
backend/tests/: documentation_task.py
docs/: blueprint.md
frontend/: .env.example  .gitignore  package.json
project_docs/: adk_memory_and_state_management.md  agent_implementation_plan.md  backend_refactor_plan.md  final_project_v1.md  refactoring_improvement_plan.md
(+79 files in other folders)
