[tool.poetry]
name = "gitdocu-backend"
version = "0.1.0"
description = "Backend service for GitDocu using Google ADK."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-cors = "^4.0.0"
google-adk = "^0.3.0"
google-generativeai = "*"
astroid = "*"
graphviz = "*"
matplotlib = "*"
Flask-Cors = "^4.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
GitPython = "^3.1.40"
pydantic = "^2.5.2"
Flask-SQLAlchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# ... existing dev dependencies ...
